@@ -2,10 +2,29 @@ allow booting;
 allow bootp;
 ddns-update-style interim;
 
+option space pxelinux;
+option pxelinux.magic code 208 = string;
+option pxelinux.configfile code 209 = text;
+option pxelinux.pathprefix code 210 = text;
+option pxelinux.reboottime code 211 = unsigned integer 32;
+option architecture-type code 93 = unsigned integer 16;
+
 class "pxeclients" {
   match if substring(option vendor-class-identifier, 0, 9) = "PXEClient";
   next-server         <%= $simpsetup::dhcp::ksip -%>;
-  filename        "linux-install/pxelinux.0";
+
+  # The appropriate value to use for the default UEFI PXEboot file
+  # below depends upon the OS and whether secure boot is enabled:
+  #   CentOS 7 (grub2) normal UEFI boot       -->  "linux-install/efi/grubx64.efi";
+  #   CentOS 7 (grub2) secure UEFI boot       -->  "linux-install/efi/shim.efi";
+  #   CentOS 6 (legacy grub) normal UEFI boot -->  "linux-install/efi/grub.efi";
+  #   (There is no CentOS 6 support for secure boot)
+  #
+  if option architecture-type = 00:07 {
+    filename    "linux-install/efi/grubx64.efi";
+  } else {
+    filename    "linux-install/pxelinux.0";
+  }
 }
 
 subnet <%= $simpsetup::dhcp::fwdaddr %>.0 netmask 255.255.255.0 {
@@ -20,4 +39,3 @@ subnet <%= $simpsetup::dhcp::fwdaddr %>.0 netmask 255.255.255.0 {
 
   default-lease-time      21600;
   max-lease-time      43200;
-
