@@ -1,6 +1,6 @@
 {
   "name": "simp-packer",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "SIMP Team",
   "summary": "Module for creating vagrant boxes for training and testing",
   "license": "Apache-2.0",
