@@ -12,3 +12,5 @@ FIPS: 'fips=1'
 #    DISK_CRYPT: ''
 #    BIG_SLEEP: ''
 #    ROOT_UMASK: '0077'
+HEADLESS: 'false'
+FIRMWARE: 'efi'
